--- a/Views/AboutPage.xaml
+++ b/Views/AboutPage.xaml
@@ -2,20 +2,23 @@
 
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:models="clr-namespace:Cisneros_Cahueñas_Puga_Notes.Models"
-             x:Class="Cisneros_Cahueñas_Puga_Notes.Views.AboutPage">
+             xmlns:viewmodels="clr-namespace:Cisneros_Cahueñas_Puga_Notes.ViewModels"
+             x:Class="Cisneros_Cahueñas_Puga_Notes.Views.AboutPage"
+             x:DataType="viewmodels:AboutViewModel">
     <ContentPage.BindingContext>
-        <models:About />
+        <viewmodels:AboutViewModel />
     </ContentPage.BindingContext>
     <VerticalStackLayout Spacing="10" Margin="10">
-            <HorizontalStackLayout Spacing="10">
-                <Image Source="star_wars.png"
-                       HeightRequest="64" />
-                <Label FontSize="22" Text="{Binding Title}" VerticalOptions="End" />
-                <Label FontSize="22" Text="{Binding Version}" VerticalOptions="End" />
-            </HorizontalStackLayout>
+        <HorizontalStackLayout Spacing="10">
+            <Image Source="dotnet_bot.png"
+                   SemanticProperties.Description="The dot net bot waving hello!"
+                   HeightRequest="64" />
+            <Label FontSize="22" FontAttributes="Bold" Text="{Binding Title}" VerticalOptions="End" />
+            <Label FontSize="22" Text="{Binding Version}" VerticalOptions="End" />
+        </HorizontalStackLayout>
 
-            <Label Text="{Binding Message}" />
-            <Button Text="Learn more..." Clicked="LearnMore_Clicked" />
-        </VerticalStackLayout>
+        <Label Text="{Binding Message}" />
+        <Button Text="Learn more..." Command="{Binding ShowMoreInfoCommand}" />
+    </VerticalStackLayout>
+
 </ContentPage>
