--- a/Views/AllNotesPage.xaml
+++ b/Views/AllNotesPage.xaml
@@ -1,34 +1,38 @@
-<?xml version="1.0" encoding="utf-8"?>
-
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:models="clr-namespace:Cisneros_Cahueñas_Puga_Notes.Models"
-             x:Class="Cisneros_Cahueñas_Puga_Notes.Views.AllNotesPage">
-        <ContentPage.ToolbarItems>
-            <ToolbarItem Text="Add" Clicked="Add_Clicked" IconImageSource="{FontImage Glyph='+', Color=Black, Size=22}" />
-        </ContentPage.ToolbarItems>
+             xmlns:viewModels="clr-namespace:Cisneros_Cahueñas_Puga_Notes.ViewModels"
+             x:Class="Cisneros_Cahueñas_Puga_Notes.Views.AllNotesPage"
+             Title="Your Notes"
+             x:DataType="viewModels:NotesViewModel">
+    <ContentPage.BindingContext>
+        <viewModels:NotesViewModel />
+    </ContentPage.BindingContext>
 
-        <CollectionView x:Name="notesCollection"
-                        ItemsSource="{Binding Notes}"
-                        Margin="20"
-                        SelectionMode="Single"
-                        SelectionChanged="notesCollection_SelectionChanged"
-                        HorizontalOptions="Center"
-                        WidthRequest="340">
+    <!-- Add an item to the toolbar -->
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Add" Command="{Binding NewCommand}" IconImageSource="{FontImage Glyph='+', Color=Black, Size=22}" />
+    </ContentPage.ToolbarItems>
 
-            <CollectionView.ItemsLayout>
-                <LinearItemsLayout Orientation="Vertical" ItemSpacing="14" />
-            </CollectionView.ItemsLayout>
+    <!-- Display notes in a list -->
+    <CollectionView x:Name="notesCollection"
+                    ItemsSource="{Binding AllNotes}"
+                    Margin="20"
+                    SelectionMode="Single"
+                    SelectionChangedCommand="{Binding SelectNoteCommand}"
+                    SelectionChangedCommandParameter="{Binding x:DataType='CollectionView', Source={RelativeSource Self}, Path=SelectedItem}">
+        <!-- Designate how the collection of items are laid out -->
+        <CollectionView.ItemsLayout>
+            <LinearItemsLayout Orientation="Vertical" ItemSpacing="10" />
+        </CollectionView.ItemsLayout>
 
-            <CollectionView.ItemTemplate>
-                <DataTemplate x:DataType="models:Note">
-                    <Frame Padding="14" CornerRadius="10" HasShadow="True" Margin="0,0,0,4" BackgroundColor="#FAFAFA">
-                        <VerticalStackLayout>
-                            <Label Text="{Binding Text}" FontSize="22" TextColor="Black"/>
-                            <Label Text="{Binding Date}" FontSize="14" TextColor="Gray"/>
-                        </VerticalStackLayout>
-                    </Frame>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
+        <!-- Define the appearance of each item in the list -->
+        <CollectionView.ItemTemplate>
+            <DataTemplate x:DataType="viewModels:NoteViewModel">
+                <StackLayout>
+                    <Label Text="{Binding Text}" FontSize="22"/>
+                    <Label Text="{Binding Date}" FontSize="14" TextColor="Silver"/>
+                </StackLayout>
+            </DataTemplate>
+        </CollectionView.ItemTemplate>
+    </CollectionView>
 </ContentPage>
