--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Shell
-    x:Class="Cisneros_Notes.AppShell"
+    x:Class="Cisneros_Cahueñas_Puga_Notes.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:Cisneros_Cahueñas_Puga_Notes"
     xmlns:views="clr-namespace:Cisneros_Cahueñas_Puga_Notes.Views"
     Title="Cisneros_Notes">
 
@@ -17,5 +16,4 @@
             ContentTemplate="{DataTemplate views:AboutPage}"
             Route="AboutPage" />
     </TabBar>
-
 </Shell>
