--- a/Views/AboutPage.xaml
+++ b/Views/AboutPage.xaml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodels="clr-namespace:Cisneros_Cahueñas_Puga_Notes.ViewModels"
+             xmlns:views="clr-namespace:Cisneros_Cahueñas_Puga_Notes.Views"
              x:Class="Cisneros_Cahueñas_Puga_Notes.Views.AboutPage"
              x:DataType="viewmodels:AboutViewModel">
     <ContentPage.BindingContext>
         <viewmodels:AboutViewModel />
     </ContentPage.BindingContext>
-    <VerticalStackLayout Spacing="10" Margin="10">
-        <HorizontalStackLayout Spacing="10">
-            <Image Source="dotnet_bot.png"
-                   HeightRequest="64" />
-            <Label FontSize="22" FontAttributes="Bold" Text="{Binding Title}" VerticalOptions="End" />
-            <Label FontSize="22" Text="{Binding Version}" VerticalOptions="End" />
-        </HorizontalStackLayout>
-
-        <Label Text="{Binding Message}" />
-        <Button Text="Learn more..." Command="{Binding ShowMoreInfoCommand}" />
-    </VerticalStackLayout>
-
+    <ScrollView>
+        <VerticalStackLayout Spacing="10" Margin="10">
+            <HorizontalStackLayout Spacing="10">
+                <Label FontSize="22" FontAttributes="Bold" Text="{Binding Title}" VerticalOptions="End" />
+                <Label FontSize="22" Text="{Binding Version}" VerticalOptions="End" />
+            </HorizontalStackLayout>
+            <CollectionView ItemsSource="{Binding TeamMembers}">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <views:MemberCardView />
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
